# cvw-arch-verif

./: .codespellrc  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE.md  Makefile  Makefile-old  README.md  checker  config.yaml  ctp.adoc  cvw-arch-verif.do  cvw-rv64gc.yaml  cvw_config.yaml  help.txt  pyproject.toml  pyrightconfig.json  setup.sh  testbench.sv
.github/: dependabot.yml
_old-priv-tests/: EndianM.S  EndianU.S  ExceptionsInstr.S  ExceptionsM.S  SsstrictCsrS.S  SsstrictInstrM.S  WALLY-init-lib.h
covergroupgen/: covergroupgen.py
cvw_arch_verif/: combinetests.py  covergroupgen.py  csrtests.py  sail-parse.py  testgen.py  trace-coverreport.py  vector-coverage.py  vector-testgen-unpriv.py  vector_coverage.py  vector_testgen_common.py
env/: arch_test.h  encoding.h  test_macros.h  test_macros_vector.h
fcov/: Makefile  RISCV_coverage.svh  RV64VM_PMP_coverage.sv  RV64VM_coverage.sv  RV64VM_coverage.svh  RV64Zicbom_coverage.svh  RV64Zicntr_coverage.sv  RV64Zihpm_coverage.sv  cvw-arch-verif.f  cvw_arch_verif.sv  disassemble.svh  dissassembler.sv  riscv_instr.svh  rvviTrace.sv  test_vm39_coverage.sv  test_vm48_coverage.sv  test_zicbom_coverage.sv  test_zicntr_coverage.sv  test_zihpm_coverage.sv  testbench.sv
framework/: act.py  config.py  coverreport.py  cvw-arch-verif.do  main.py  makefile_gen.py  parse_test_constraints.py  parse_udb_config.py  pyproject.toml  sail_to_rvvi.py  select_tests.py  sig_modify.py
framework/fcov/: disassemble.svh
framework/fcov/coverage/: RISCV_coverage_common.svh  RISCV_coverage_config.svh  RISCV_coverage_pkg.svh  RISCV_coverage_standard_coverpoints.svh  RISCV_coverage_standard_coverpoints_vector.svh
framework/src/act/: act.py  coverreport.py  cvw-arch-verif.do  makefile_gen.py  parse_test_constraints.py  parse_udb_config.py  sail_to_rvvi.py  select_tests.py  sig_modify.py
framework/src/act/fcov/: cvw_arch_verif.sv  testbench.sv
framework/src/act/fcov/coverage/: RISCV_coverage_hazards.svh  RISCV_coverage_rvvi.svh  RISCV_decode_pkg.svh  RISCV_disassemble_helpers.svh  RISCV_instruction_base.svh
generators/tests/: csrtests.py  illegalinstrtests.py  pyproject.toml  registers.py  testgen.py  vector-testgen-priv.py  vector-testgen-unpriv.py  vector_testgen_common.py
generators/tests/scripts/: csrtests.py  illegalinstrtests.py
generators/tests/templates/: amoadd.w.S  lbu.S  pause.S  sb.S  sc.w.S  testgen_footer.S  testgen_footer_vector2.S
generators/tests/testgen/: common.py  coverpoints.py  edges.py  format_instruction.py  immediates.py  instruction_params.py  load_templates.py  make_coverpoints.py  pyproject.toml  registers.py  templates.py  test_data.py  testgen.py  testplans.py  write_tests.py
generators/tests/testgen/coverpoints/: __init__.py  compare.py  coverpoints.py  custom.py  hazards.py  imm_edges.py  memory.py  reg_edges.py  register.py
generators/tests/testgen/data/: registers.py  test_data.py
generators/tests/testgen/instruction_formatters/: __init__.py  _instruction_formatters.py  b_type.py  csr_type.py  i1_type.py  i_type.py  instruction_formatters.py  ir_type.py  is_type.py  isw_type.py  j_type.py  jr_type.py  l_type.py  r_type.py  s_type.py  u_type.py
generators/tests/testgen/src/testgen/: __init__.py  testgen.py
generators/tests/testgen/src/testgen/coverpoints/: __init__.py  compare.py  coverpoints.py  crypto.py  hazards.py  memory.py
generators/tests/testgen/src/testgen/data/: instruction_params.py  registers.py  test_data.py
generators/tests/testgen/src/testgen/instruction_formatters/: __init__.py  b_type.py  csri_type.py  i1_type.py  instruction_formatters.py  ir_type.py  is_type.py  jr_type.py  r_type.py  rb_type.py  u_type.py
generators/tests/testgen/src/testgen/templates/: fence.S  testgen_header.S
generators/tests/testgen/src/testgen/utils/: edges.py  immediates.py  templates.py
generators/tests/testgen/templates/: amoswap.w.S  fence.i.S  lh.S  lw.S  testgen_footer.S  testgen_header.S
generators/tests/testgen/utils/: common.py  templates.py  testplans.py
old-priv-tests/: EndianS.S  ExceptionsF.S  ExceptionsS.S  ExceptionsU.S  ExceptionsZalrsc.S  ExceptionsZicboS.S  Svinval.S  ZicntrM.S  ZicntrS.S  ZicsrF.S  ZicsrS.S  ZicsrU.S  priv-endian.h
sail_cSim/: riscof_sail_cSim.py
templates/: RV32I_coverage.svh  RV32_c_rd_corners.txt  RV32_c_rs1_corners.txt  RV32_c_rs2_corners.txt  RV32_cp_fd_toggle.txt  RV32_cp_fs2_toggle.txt  RV32_cp_imm_cshift.txt  RV32_cp_imm_mul.txt  RV32_cp_imm_ones_zeros.txt  RV32_cp_imm_ones_zeros_5.txt  RV32_cp_imm_ones_zeros_addi16sp.txt  RV32_cp_imm_ones_zeros_addi4spn.txt  RV32_cp_imm_ones_zeros_c_jal.txt  RV32_cp_imm_ones_zeros_jal.txt  RV32_cp_imm_ones_zeros_nbit_0_1.txt  RV32_cp_imm_shift.txt  RV32_cp_imm_shift_c.txt  RV32_cp_rd_corners.txt  RV32_cp_rd_corners_6bit.txt  RV32_cp_rd_corners_auipc.txt  RV32_cp_rd_corners_clui.txt  RV32_cp_rd_corners_lb.txt  RV32_cp_rd_corners_lbu.txt  RV32_cp_rd_corners_lhu.txt  RV32_cp_rd_corners_lui.txt  RV32_cp_rd_corners_rev8.txt  RV32_cp_rd_corners_slli.txt  RV32_cp_rd_corners_srai.txt  RV32_cp_rd_corners_srli.txt  RV32_cp_rd_corners_zext_b.txt  RV32_cp_rd_sign_srli.txt  RV32_cp_rd_toggle.txt  RV32_cp_rd_toggle_auipc.txt  RV32_cp_rd_toggle_clui.txt  RV32_cp_rd_toggle_jal.txt  RV32_cp_rd_toggle_lbu.txt  RV32_cp_rd_toggle_lhu.txt  RV32_cp_rd_toggle_lui.txt  RV32_cp_rd_toggle_slli.txt  RV32_cp_rd_toggle_srli.txt  (+277 more)
testgen/: Makefile  covergen.py  csrtests.py  testgen.py  testgen_header.S  vector_testgen_common.py
testplans/: D.csv  DV plan SV39 Virtual Memory.xlsx  (+122 more)
(+3094 files in other folders)
