[project]
name = "cvw-arch-verif"
version = "0.1.0"
description = "RISC-V Tests"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = []

[project.scripts]
covergroupgen = "cvw_arch_verif.covergroupgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvw_arch_verif"]
