[project]
name = "cvw-arch-verif"
version = "0.1.0"
description = "RISC-V Tests"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
  # For CLI argument parsing (better alternative to argparse).
  "typer >= 0.16.0",
]

[project.scripts]
covergroupgen = "cvw_arch_verif.covergroupgen:main"
vector_coverage = "cvw_arch_verif.vector_coverage:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvw_arch_verif"]
