[project]
name = "act"
version = "0.2.0"
description = "RISC-V Architecture Compatibility Test Framework"
readme = "../README.md"
authors = [
    { name = "Jordan Carlin", email = "jcarlin@hmc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "ruamel-yaml>=0.18.15",
]

[project.scripts]
act = "act.act:main"
sail-to-rvvi = "act.sail_to_rvvi:main"
coverreport = "act.coverreport:main"
sig_modify = "act.sig_modify:main"

##### BUILD #####
[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
